stylesheet.less
/* ... */
.main a, .nav a, .nav .text {
	transition: .2s;
	padding-bottom: .3em;
	cursor: pointer;
	&:hover {
		color: @color-swatch4;
		padding-bottom: 0;
	}
}

/* 
	HEADER NAV
*/

.nav {
	float: left;
	width: 100%;
	a, a:hover {
		border-bottom: none;
	}
}

.widget .extendednavigation ul {
	text-align: center;
	background-color: rgba(1, 1, 1, 0.05);
}
.widget .extendednavigation li > .text,
.widget .extendednavigation ul li a {
	padding: 0;
}
.widget .extendednavigation ul li {
	float: none;
	display: inline-block;
}
.widget .extendednavigation ul li.folder:after {
	display: none;
}
.widget .extendednavigation ul li:hover ul {
	background: @color-swatch7;
}
.widget .extendednavigation ul li.folder .text {
	display: inline;
}
.widget .extendednavigation ul li.folder .text:hover {
	color:@font-swatch6-color; 
}
.widget .extendednavigation {
	width: 100%;
	text-align: center;
	ul {
		width: 100%;
	}
}

/* 
	FORMS
*/
input[type=search],
input[type=text],
input[type=email],
textarea,
.widget.profile form fieldset input,
.signupform fieldset input {
	border: 1px solid @color-swatch2;
	padding: 5px 10px;
	text-indent: 0;
	-webkit-transition: box-shadow .2s;
	-moz-transition: box-shadow .2s;
	-ms-transition: box-shadow .2s;
	transition: box-shadow .2s;
	&:focus {
		border: 1px solid darken(@color-swatch7, 20%);
		box-shadow: 0 0 5px @color-swatch5;
	}
}
textarea {
	resize: vertical;
	min-height: 150px;
}
input[type=search],
input[type=text],
input[type=email],
.signupform fieldset input {
	height: 42px;	
	width: 85%;
}

.contactform input[type=email] {
	width: 100%;
	margin-bottom: 20px;
}

input[type="search"]::-webkit-search-decoration {
	display: none;
}

/*
	BUTTONS
*/

button.btn,
.widget.profile form button,
.signupform fieldset button,
.blog-search-submit-button,
.widget.feature .feature-bgimg .content button.btn,
.contactform button.btn,
.widget.paypalbuynow .widget.button.paypal,
.widget.tweet a,
.widget.dropbox button,
.widget.profile .bk-profile-socialicons span a,
.widget.socialicons span a {
	background-color: @color-swatch3;
	border: none;
	-webkit-transition: background-color .2s;
	-moz-transition: background-color .2s;
	-ms-transition: background-color .2s;
	transition: background-color .2s;
	&:hover {
		background-color: lighten(@color-swatch3,20%);
		border: none;
	}
}

.widget.profile .bk-profile-socialicons span a,
.widget.socialicons span a {
	border-radius: 100%;
}

hr.line {
	background-color: fade(@color-swatch5, 25%);
	height:1px;
}

button.btn,
.widget.profile form button,
.signupform fieldset button,
.blog-search-submit-button,
.widget.feature .feature-bgimg .content button.btn,
.contactform button.btn,
.widget.clicktocall a,
.widget.clicktocall a:hover {
	padding: 9px 14px 8px;
	margin: 0;
	line-height: 25px;
}

.blog-search-form label {
	display: block;
}

.widget.tweet a:hover {
	color: @color-swatch7;
	padding-bottom: 14px;
}

.widget.clicktocall a {
	border: 2px solid @color-swatch3;
	display: inline-block;
	margin-bottom: 1em;
	&:hover {
		border-color: darken(@color-swatch3, 10%);
	}
}

.widget.profile form button {
	padding: 10px 14px 8px;
}

/*
	TWITTER
*/

.widget.twitter ul li a,
.widget.twitter ul li span a {
	text-decoration: none;
	font-size: inherit;
	font-weight: inherit;
	&:hover {
		text-decoration: none;
	}
}

.twitter-profile-pic {
	a {
		border: 0;
	}
}
.twitter ul li time {
	font-size: inherit;
}

/*
	IMAGES
*/
.widget.gallery ul li span.inner a {
	&:hover {
		border: none;
	}
}
.widget.gallery {
	margin: 0;
}

/*
	MENU
*/
.dietary-icon,
.menu .menu-section-item-dietary-props .dietary-icon,
.menu .menu-info .dietary-icon {
	border-radius: 4px;
	font-size: bkscale(@font-swatch5-font-size, 0.9);
	margin-top: 1em;
	padding: 1px 8px;
	background-color:@color-swatch6;
	color: #fff;
}

.menu-item-nutritional-title {
	font-weight: @font-swatch9-font-weight;
}

.menu-name-background {
	margin-bottom:10px;
}

/*	===============================
	Globals
	=============================== */

::-moz-selection { background-color: fade(@color-swatch3, 85%); }
::selection { background-color: fade(@color-swatch3, 85%); }

body {
	background-color: @color-swatch1;
	background-image: image('/images/background.jpg');
	background-size: 100% auto;
	background-attachment: fixed;
	padding: 2%;
	-webkit-font-smoothing: antialiased;
	text-rendering: optimizeLegibility;
	background-repeat:no-repeat;
}
.page-wrap {
	max-width: 1100px;
	margin: 0 auto;
	background: @color-swatch1;
	padding: 0 2% 1% 2%;
	margin-top: 60px;
}

.menu-page h1 {
	background-color:@color-swatch7;
}

.main.menu-page {
	padding: 0 8%;
}

.companyname {
	margin:0px auto;
	text-align:center;
	display:table;
	padding:150px 0px;
}
/* ... */

